# ansible-doc-extractor

./: .gitignore  Pipfile  README.rst  setup.cfg
.eggs/setuptools_scm-5.0.1-py3.6.egg/EGG-INFO/: PKG-INFO  RECORD  entry_points.txt
.github/workflows/: ci.yml
src/ansible_doc_extractor/: cli.py  table_builder.py  table_gen.py
src/ansible_doc_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ansible_doc_extractor/templates/: module.md.j2  module.rst.j2
src/ansible_doc_extractor/tests/: test_table.py
tests/integration/basic/: ad_auth_provider.py  run.sh
tests/integration/doc_fragments/: run.sh
tests/integration/doc_fragments/ansible_collections/sensu/sensu_go/plugins/doc_fragments/: auth.py  name.py  requirements.py  state.py
tests/integration/doc_fragments/ansible_collections/sensu/sensu_go/plugins/modules/: ad_auth_provider.py
