[metadata]
name = ansible-doc-extractor
author = XLAB Steampunk
author_email = steampunk@xlab.si
license_file = LICENSE
description = Extract Ansible module documentation
long_description = file: README.rst
keywords = ansible, documentation
classifiers =
  Development Status :: 2 - Pre-Alpha
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
package_dir =
  = src
packages = find:
zip_safe = True
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  ansible
  jinja2
  PyYAML

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  ansible-doc-extractor = ansible_doc_extractor.cli:main
